--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
                 <p>Popularidade: <span id="popularity-stat">20</span></p>
             </div>
         </header>
-        <div class="field-display">
-            <p id="game-narrative">Você está prestes a entrar em campo para a grande final. O que você faz?</p>
-        </div>
-        <div id="choice-buttons" class="choice-buttons">
-            <button class="btn" onclick="takeAction('passar')">Passar a bola</button>
-            <button class="btn" onclick="takeAction('driblar')">Driblar o adversário</button>
-        </div>
-    </div>
-    <script src="script.js"></script>
+         <div class="player-image" style="text-align: center; margin-bottom: 20px;">
+            <img src="Cristiano-Ronaldo-e1759930554805.webp" alt="Imagem do Jogador de Futebol em Ação" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+        </div>
+                <div class="field-display">
+            <p id="game-narrative">Você está prestes a entrar em campo para a grande final. O que você faz?</p>
+        </div>
+        <div id="choice-buttons" class="choice-buttons">
+            <button class="btn" onclick="takeAction('passar')">Passar a bola</button>
+            <button class="btn" onclick="takeAction('driblar')">Driblar o adversário</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
